--- a/package.json
+++ b/package.json
@@ -8,9 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
+    "bootstrap-vue": "^2.22.0",
+    "buefy": "^0.9.22",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14",
+    "hooper": "^0.3.4",
+    "swiper-vue2": "^1.0.10",
+    "vue": "^2.7.10",
+    "vue-easy-slider": "^5.3.4",
     "vue-router": "^3.5.1",
+    "vueperslides": "^2.15.3",
+    "vuetify": "^2.6.11",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
@@ -28,7 +36,9 @@
     "prettier": "^2.4.1",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
